--- a/traversy-media/src/App.css
+++ b/traversy-media/src/App.css
@@ -13,3 +13,19 @@ a {
   color: #333;
   text-decoration: none;
 }
+
+.container {
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  background: #555;
+  color: #fff;
+  padding: 7px 20px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #666;
+}
