--- a/udemy-max-schwarzmüller-course/main-tutorial/src/Person/Person.css
+++ b/udemy-max-schwarzmüller-course/main-tutorial/src/Person/Person.css
@@ -1,11 +1,8 @@
 .Person {
-  width: 60%;
-  margin: auto;
-  border: 1px solid #eee;
-  box-shadow: 0 2px 3px #ccc;
-  padding: 1rem;
-}
-
-.Person:not(:last-child) {
-  margin-bottom: 1rem;
+    width: 60%;
+    margin: 16px auto;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    padding: 16px;
+    text-align: center;
 }
